[fix] fix manage.io sizing on smaller resolution

--- a/app/assets/stylesheets/components/_sideNav.scss
+++ b/app/assets/stylesheets/components/_sideNav.scss
@@ -1,5 +1,17 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
+@media screen and (max-width: 1280px) {
+  .manageIo-text {
+    font-size: 2em;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .manageIo-text {
+    font-size: 1.8em;
+  }
+}
+
 .wrapper {
   width: 100%;
 }
